[metadata]
name = diadem
author = William E Fondrie
author_email = wfondrie@talus.bio
description = A feature-centric DIA search engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TalusBio/diadem
project_urls =
    Documentation = https://TalusBio.github.io/diadem
    Bug Tracker = https://github.com/TalusBio/diadem/issues
    Discussion Board = https://github.com/TalusBio/diadem/discussions
license = AGPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scikit-learn
    numba
    mokapot

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    pydata-sphinx-theme>=0.4.3
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    diadem = diadem.diadem:main
